# CR-Solver

./: .flake8  .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
benchmark/: constrain_motion_planning.py  constrain_motion_planning_plot.py  ik_eval.py  ik_eval_with_coll.py  ik_plot.py  inject_test.py  mp_analyze.py  mp_eval_with_coll_scenes.py  mp_plot.py  visualizer_eval.py
benchmark/ik/: ik_eval.py  ik_eval_with_coll.py  ik_plot.py
benchmark/mp/: constrain_motion_planning.py  inject_test.py  mp_analyze.py  mp_eval.py  mp_eval_cpu.py  mp_eval_with_coll_scenes.py  mp_plot.py  problems.py  utils.py
benchmark/mp/test/: test.sh  test_0.sh  test_1.sh  test_2.sh  (+4 more)
configs/: pcc_2d.json  pcc_2d_mobile.json
configs/maps/: obstacles.json  obstacles_01.json  obstacles_02.json  obstacles_03.json  obstacles_04.json  obstacles_05.json  obstacles_N.json  obstacles_con_A.json  obstacles_con_R.json
configs/robots/: cc.json  cc_4_extend.json  cc_5.json  cc_con_eval.json  cc_con_tdcr.json  cc_eval.json  cc_extend_eval.json  cc_mobile_z.json  cc_scene_eval.json  cc_scene_eval_cc.json  cc_scene_eval_tdcr.json  cc_tdcr.json  pcc.json  pcc_2d_2.json  pcc_2d_4.json  pcc_2d_5.json  pcc_2d_mobile.json  pcc_2d_nav.json  pcc_eval.json  pcc_mobile.json  pcc_mobile_z.json
cr_solver/: __init__.py
cr_solver/costs/: __init__.py  cc_costs.py
cr_solver/geom/: collision.py  geometry.py  geometry_pairs.py
cr_solver/robots/: cc_robot_extend.py  tdcr_robot.py
cr_solver/solver/: __init__.py  ik_solver.py  utils.py
cr_solver/visualization/: __init__.py  visualizer_plot.py
demo/: 01_base_ik_3.py  02_base_ik_5.py  03_base_ik_extendable.py  04_ik_with_coll.py
docs/: RESULTS.md
example/: 00_env.py  01_fk.py  02_base_ik.py  03_ik_with_coll.py  03_mobile_ik.py  04_ik_with_coll.py  04_mobile_ik.py  05_motion_planning.py  05_motion_planning_e.py  05_traj_opt.py  06_constraint_motion_planning.py  06_ee_traj_following.py  07_complex_navigation.py  07_constrain_motion_planning_with_coll.py  07_constrain_motion_planning_with_word.py  07_path_planning.py  forwad_kinematics.py  inverse_kinematics.py
example/cc_robot/: 02_base_ik.py  03_mobile_ik.py  04_ik_with_coll.py  05_motion_planning.py  06_constraint_motion_planning.py  07_complex_navigation.py  07_constrain_motion_planning_with_word.py
example/pcc_robot/: 01_fk.py
example/test_costs/: position_cost.py
soul/: __init__.py
soul/collision/: __init__.py  collision.py  geometry.py  pcc_robot_collision.py  robot_collision.py
soul/costs/: __init__.py  _costs.py  cc_costs.py  costs.py  tdcr_costs.py
soul/envs/: env_2d.py  obs_env.py
soul/geom/: __init__.py  collision.py  collision_cc_robot.py  collision_pcc_robot.py  collision_world.py  geometry.py  geometry_pairs.py  shpere_fit.py  utils.py
soul/robots/: __init__.py  cc_robot.py  cc_robot_extend.py  pcc_robot.py  pcc_robot_array.py  tdcr_robot.py
soul/solver/: __init__.py  _solve_ik.py  ik.py  ik_solver.py  ik_with_coll.py  ik_with_coll_mobile.py  motion_planner.py  tendon_fk_solver.py  traj_follow.py  traj_optimizer.py  trajopt.py  utils.py
soul/visualization/: __init__.py  visualizer.py  visualizer_plot.py  visualizer_viser.py
tools/: gen_env.py  visual_mp_result.py
tools/obstacle_editor/: README.md  obstacle_editor.html  script.js  style.css
(+39 files in other folders)
